# 23203_drizhak

./: .gitmodules
Game_of_life/: CMakeLists.txt  engine.cpp  engine.h  field.cpp  field.h  window.cpp  window.h  window.ui
lab1/: CMakeLists.txt  flatmap.cpp  flatmap.h  flatmap_test.cpp
lab2/: CMakeLists.txt  card.h  competition.cpp  competition.h  console_interface.cpp  deck.h  engine.h  engine_impl.h  factory.h  main.cpp  move.h  multiple_deck.cpp  simple_deck.cpp  strategy.h  strategy_1.cpp  strategy_2.cpp  strategy_3.cpp  strategy_4.cpp  strategy_5.cpp  tournament.cpp  user_interface.h
